--- a/index.html
+++ b/index.html
@@ -100,14 +100,7 @@
     </section>
     <section id="contact">
       <h2>Contact</h2>
-      <p>
-        Date de contact:<br />
-        Număr de telefon: +40757396505 <br />
-        Adresa de email:
-        <a href="mailto:schmidtjosefphilipp@gmail.com"
-          >schmidtjosefphilipp@gmail.com</a
-        >
-      </p>
+      <p>Date de contact:<br /></p>
     </section>
     <footer>
       <p>Copyright &copy; 2024 Schmidt Josef-Philipp</p>
